--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "fuse.js": "^3.2.1",
+    "normalize.css": "^8.0.0",
     "vue": "^2.5.16"
   },
   "devDependencies": {
